--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<h1>Bem-vindo à Home!</h1>
+<h1>Bem-vindo{{ user?.username ? ', ' + user.username : '' }}!</h1>
+
 <button mat-raised-button color="warn" (click)="logout()">Logout</button>
 
 <form [formGroup]="form" (ngSubmit)="submit()" style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
@@ -69,3 +70,16 @@
   [selectedValue]="selectedToggle"
   (onToggleSelect)="handleToggle($event)"
 ></app-dynamic-three-toggle>
+
+<!-- home.component.html -->
+<form [formGroup]="form" (ngSubmit)="submit()">
+
+  <!-- OU a versão sem mat-form-field -->
+  <app-rich-text-editor 
+    formControlName="descricao"
+    label="Descrição"
+    placeholder="Digite sua descrição aqui...">
+  </app-rich-text-editor>
+
+  <button mat-raised-button color="primary" type="submit">Enviar</button>
+</form>
