validações - ok tela cadastro - 90%

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -10,6 +10,11 @@
             <input matInput type="password" formControlName="password" />
         </mat-form-field>
 
+        <div class="login-links">
+            <a routerLink="/criar-conta">Criar nova conta</a>
+            <a routerLink="/recuperar-senha">Esqueci a senha</a>
+        </div>
+
         <button mat-raised-button color="primary" class="full-width">Entrar</button>
     </form>
 </div>
