--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <h1>Bem-vindo{{ user?.username ? ', ' + user.username : '' }}!</h1>
 
-<button mat-raised-button color="warn" (click)="logout()">Logout</button>
+<form [formGroup]="form" (ngSubmit)="submit()" 
+style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
 
-<form [formGroup]="form" (ngSubmit)="submit()" style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
     <app-custom-input
       label="Nome"
       [control]="getControl('nome')"
@@ -61,7 +61,6 @@
   <app-dynamic-button type="add"></app-dynamic-button>
 </div>
   
-
 <app-dynamic-three-toggle
   [title]="'Período'"
   [btn1]="{ label: 'Mensal', value: 'mes' }"
@@ -73,7 +72,6 @@
 
 <!-- home.component.html -->
 <form [formGroup]="form" (ngSubmit)="submit()">
-
   <!-- OU a versão sem mat-form-field -->
   <app-rich-text-editor 
     formControlName="descricao"
