--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,18 +1,33 @@
 <mat-form-field [ngClass]="[getSizeClass(), cssClass]" appearance="outline" class="custom-field">
-    <mat-label>{{ label }}</mat-label>
-    <input
-      matInput
-      [type]="inputType"
-      [formControl]="control"
-      [placeholder]="placeholder"
-      [mask]="mask"
-      [dropSpecialCharacters]="false"
-    />
-  
-    <mat-error *ngIf="showError">
-      <ng-container *ngIf="control.errors?.['required']">Campo obrigatório.</ng-container>
-      <ng-container *ngIf="control.errors?.['email']">E-mail inválido.</ng-container>
-      <ng-container *ngIf="control.errors?.['pattern']">Formato inválido.</ng-container>
-    </mat-error>
-  </mat-form-field>
-  
+  <mat-label>{{ label }}</mat-label>
+
+  <input
+    matInput
+    [type]="inputType"
+    [formControl]="control"
+    [placeholder]="placeholder"
+    [mask]="mask"
+    [dropSpecialCharacters]="false"
+  />
+
+  <button
+  *ngIf="isSearchable"
+  mat-icon-button
+  matSuffix
+  (click)="search()"
+  type="button"
+  aria-label="Buscar"
+>
+  <mat-icon *ngIf="!loading">search</mat-icon>
+  <mat-spinner *ngIf="loading" diameter="20" strokeWidth="3" color="primary"></mat-spinner>
+</button>
+
+
+<mat-error *ngIf="showError">
+  <ng-container *ngIf="control.errors?.['required']">Campo obrigatório.</ng-container>
+  <ng-container *ngIf="control.errors?.['email']">E-mail inválido.</ng-container>
+  <ng-container *ngIf="control.errors?.['pattern']">Formato inválido.</ng-container>
+  <ng-container *ngIf="control.errors?.['passwordsMismatch']">Senhas não conferem.</ng-container>
+</mat-error>
+
+</mat-form-field>
