--- a/src/app/public/new-account/new-account.component.scss
+++ b/src/app/public/new-account/new-account.component.scss
@@ -5,7 +5,7 @@
     right: 0;
     width: 100%;                 // Garante 100% da largura
     height: 64px;
-    background-color: #f5f5f5;
+    background-color: #010c69;
     display: flex;
     align-items: center;
     gap: 16px;
@@ -17,6 +17,7 @@
       margin: 0;
       font-size: 1.5rem;
       font-weight: 500;
+      color: #ffffff;
     }
   }
   
