--- a/src/app/shared/components/custom-input/custom-input.component.scss
+++ b/src/app/shared/components/custom-input/custom-input.component.scss
@@ -13,27 +13,35 @@
   line-height: 1.2 !important;
   color: #222 !important; // Texto digitado mais escuro
   caret-color: #000 !important;
+}
 
-  &::placeholder {
-    color: #555 !important; // Placeholder mais escuro
-    opacity: 1 !important;
-  }
+/* 💡 Ajuste direto no placeholder com cor mais escura */
+::ng-deep .mat-mdc-input-element::placeholder {
+  color: #555 !important;  // Ou #444 se quiser mais escuro
+  opacity: 1 !important;
 }
 
 ::ng-deep .mat-mdc-floating-label {
   font-size: 12px !important;
 }
 
-::ng-deep .mat-mdc-form-field-label {
-  font-size: 13px !important;
-  top: 50% !important;
-  transform: translateY(-50%) !important;
-  line-height: 1 !important;
-  color: #666 !important; // Label em repouso
+.search-button {
+  height: 30px;
+  width: 35px;
+  margin-right: 7px;
+  background-color: blue;
+  color: white;
+  border-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-::ng-deep .mat-mdc-form-field.mat-form-field-should-float .mat-mdc-form-field-label {
-  transform: translateY(-22px) scale(0.75) !important;
-  font-size: 12px !important;
-  color: #444 !important; // Label flutuante
+::ng-deep .mat-mdc-form-field .mat-mdc-form-field-error {
+  color: #f44336 !important; // vermelho Material (ou use "red" puro se preferir)
+  font-size: 12px;
+  font-weight: 500;
+}
+
+::ng-deep .mat-mdc-form-field-invalid .mat-mdc-outline {
+  border-color: #f44336 !important;
 }
