pie chart created

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -110,3 +110,7 @@ style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
   [chamados]="chamadosMock"
 ></app-chart>
 
+<app-pie-chart [chamados]="chamadosMock">
+  
+</app-pie-chart>
+
