input date correction OK toggleFilter chart OK

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,57 +3,40 @@
   {{ theme() === 'dark' ? '🌞 Tema Claro' : '🌙 Tema Escuro' }}
 </button>
 
-<form [formGroup]="form" (ngSubmit)="submit()" 
-style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
+<form [formGroup]="form" (ngSubmit)="submit()"
+  style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
 
-    <app-custom-input
-      label="Nome"
-      [control]="getControl('nome')"
-      size="pequeno">
-    </app-custom-input>
-  
-    <app-custom-input
-      label="Email"
-      [control]="getControl('email')"
-      size="full-width"
-      type="email">
-    </app-custom-input>
-  
-    <app-custom-input
-      label="Telefone"
-      [control]="getControl('telefone')"
-      size="medio"
-      type="telefone">
-    </app-custom-input>
-
-    <app-custom-input
-      label="CPF"
-      type="cpf"
-      [control]="getControl('cpf')"
-      size="medio">
-    </app-custom-input>
-
-    <app-custom-input
-      label="CNPJ"
-      type="cnpj"
-      [control]="getControl('cnpj')"
-      size="grande">
-    </app-custom-input>
-
-    <app-custom-input
-    label="CEP"
-    type="cep"
-    [control]="getControl('cep')"
-    size="pequeno">
+  <app-custom-input label="Nome" [control]="getControl('nome')" size="pequeno">
   </app-custom-input>
-  
-    <button mat-raised-button color="primary">Enviar</button>
 
-    <app-dynamic-table [headers]="headers" [data]="dados" />
-    
-  </form>
+  <app-custom-input label="Email" [control]="getControl('email')" size="full-width" type="email">
+  </app-custom-input>
 
-  <!-- Ações -->
+  <app-custom-input label="Telefone" [control]="getControl('telefone')" size="medio" type="telefone">
+  </app-custom-input>
+
+  <app-custom-input label="CPF" type="cpf" [control]="getControl('cpf')" size="medio">
+  </app-custom-input>
+
+  <app-custom-input label="CNPJ" type="cnpj" [control]="getControl('cnpj')" size="grande">
+  </app-custom-input>
+
+  <app-custom-input label="CEP" type="cep" [control]="getControl('cep')" size="pequeno">
+  </app-custom-input>
+
+  <app-custom-input [label]="'Data Inicial'" [type]="'date'" [control]="getControl('startDate')" [size]="'medio'">
+  </app-custom-input>
+
+  <app-custom-input [label]="'Data Final'" [type]="'date'" [control]="getControl('finalDate')" [size]="'medio'">
+  </app-custom-input>
+
+  <button mat-raised-button color="primary">Enviar</button>
+
+  <app-dynamic-table [headers]="headers" [data]="dados" />
+
+</form>
+
+<!-- Ações -->
 <div class="form-actions">
   <app-dynamic-button type="save" (clicked)="onSave()" [success]="saveSuccess"></app-dynamic-button>
   <app-dynamic-button type="edit" (clicked)="onEdit()"></app-dynamic-button>
@@ -63,54 +46,29 @@ style="display: flex; flex-direction: column; gap: 20px; max-width: 500px;">
   <app-dynamic-button type="find" (clicked)="onFind()"></app-dynamic-button>
   <app-dynamic-button type="add"></app-dynamic-button>
 </div>
-  
-<app-dynamic-three-toggle
-  [title]="'Período'"
-  [btn1]="{ label: 'Mensal', value: 'mes' }"
-  [btn2]="{ label: 'Semestral', value: 'semestre' }"
-  [btn3]="{ label: 'Anual', value: 'ano' }"
-  [selectedValue]="selectedToggle"
-  (onToggleSelect)="handleToggle($event)"
-></app-dynamic-three-toggle>
+
+<app-dynamic-three-toggle [title]="'Período'" [btn1]="{ label: 'Mensal', value: 'mes' }"
+  [btn2]="{ label: 'Semestral', value: 'semestre' }" [btn3]="{ label: 'Anual', value: 'ano' }"
+  [selectedValue]="selectedToggle" (onToggleSelect)="handleToggle($event)"></app-dynamic-three-toggle>
 
 <!-- home.component.html -->
 <form [formGroup]="form" (ngSubmit)="submit()">
   <!-- OU a versão sem mat-form-field -->
-  <app-rich-text-editor 
-    formControlName="descricao"
-    label="Descrição"
-    placeholder="Digite sua descrição aqui...">
+  <app-rich-text-editor formControlName="descricao" label="Descrição" placeholder="Digite sua descrição aqui...">
   </app-rich-text-editor>
 
   <button mat-raised-button color="primary" type="submit">Enviar</button>
 </form>
 
 
-<app-chart
-  [type]="ChartType.BAR"
-  [title]="'Chamados por Empresa e Mês'"
-  [chamados]="chamadosMock"
-></app-chart>
+<app-chart [type]="ChartType.BAR" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-chart
-  [type]="ChartType.AREA"
-  [title]="'Chamados por Empresa e Mês'"
-  [chamados]="chamadosMock"
-></app-chart>
+<app-chart [type]="ChartType.AREA" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-chart
-  [type]="ChartType.LINE"
-  [title]="'Chamados por Empresa e Mês'"
-  [chamados]="chamadosMock"
-></app-chart>
+<app-chart [type]="ChartType.LINE" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-chart
-  [type]="ChartType.COLUMN"
-  [title]="'Chamados por Empresa e Mês'"
-  [chamados]="chamadosMock"
-></app-chart>
+<app-chart [type]="ChartType.COLUMN" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
 <app-pie-chart [chamados]="chamadosMock">
-  
-</app-pie-chart>
 
+</app-pie-chart>
