--- a/src/app/shared/components/dynamic-three-toggle/dynamic-three-toggle.component.html
+++ b/src/app/shared/components/dynamic-three-toggle/dynamic-three-toggle.component.html
@@ -3,12 +3,11 @@
   <mat-button-toggle-group
     class="custom-toggle-group"
     [value]="selectedValue"
-    (click)="onGroupClick($event)"
+    (change)="handleChange($event.value)"
     [hideSingleSelectionIndicator]="false"
   >
     <mat-button-toggle
       class="custom-toggle"
-      [ngClass]="{ 'selected': selectedValue === btn1.value }"
       [value]="btn1.value"
     >
       {{ btn1.label }}
@@ -16,7 +15,6 @@
 
     <mat-button-toggle
       class="custom-toggle"
-      [ngClass]="{ 'selected': selectedValue === btn2.value }"
       [value]="btn2.value"
     >
       {{ btn2.label }}
@@ -24,7 +22,6 @@
 
     <mat-button-toggle
       class="custom-toggle"
-      [ngClass]="{ 'selected': selectedValue === btn3.value }"
       [value]="btn3.value"
     >
       {{ btn3.label }}
