--- a/src/app/shared/components/line-chart/line-chart.component.scss
+++ b/src/app/shared/components/line-chart/line-chart.component.scss
@@ -1,10 +1,16 @@
 .highcharts-figure,
-    .highcharts-data-table table {
-        min-width: 360px;
-        max-width: 800px;
-        margin: 1em auto;
-    }
+.highcharts-data-table table {
+    min-width: 360px;
+    max-width: 800px;
+    margin: 1em auto;
+}
 
-    .highcharts-description {
-        margin: 0.3rem 10px;
-    }
+.highcharts-description {
+    margin: 0.3rem 10px;
+}
+
+.chart-header {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
+}
