dropd de videos- falta arrumar

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,6 +69,8 @@
 
 <app-chart [type]="ChartType.COLUMN" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-pie-chart [chamados]="chamadosMock">
+<app-pie-chart [chamados]="chamadosMock"></app-pie-chart>
 
-</app-pie-chart>
+
+<h1>dropDown abaixo</h1>
+<app-dropdown-videos></app-dropdown-videos>
