--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -1,18 +1,23 @@
 <table mat-table [dataSource]="rows()" class="mat-elevation-z1 full-width">
   <ng-container *ngFor="let header of headers" [matColumnDef]="header.key">
     <th mat-header-cell *matHeaderCellDef>{{ header.label }}</th>
-    <td mat-cell *matCellDef="let row">{{ row[header.key] }}</td>
+    <td mat-cell *matCellDef="let row">
+      <span [innerHTML]="header.formatter ? header.formatter(row) : row[header.key]"></span>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Ações</th>
     <td mat-cell *matCellDef="let row" class="action-cell">
-      <mat-icon class="icon edit" (click)="edit(row)">edit</mat-icon>
-      <mat-icon class="icon delete" (click)="delete(row)">delete</mat-icon>
+      <mat-icon *ngIf="actions.includes('load')" class="icon edit" (click)="emit('load', row)">upload</mat-icon>
+      <mat-icon *ngIf="actions.includes('edit')" class="icon edit" (click)="emit('edit', row)">edit</mat-icon>
+      <mat-icon *ngIf="actions.includes('delete')" class="icon delete" (click)="emit('delete', row)">delete</mat-icon>
+      <mat-icon *ngIf="actions.includes('print')" class="icon print" (click)="emit('print', row)">print</mat-icon>
+      <mat-icon *ngIf="actions.includes('view')" class="icon view" (click)="emit('view', row)">visibility</mat-icon>
     </td>
   </ng-container>
-  
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-row"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="body-row"></tr>
 </table>
+
