--- a/src/app/shared/components/mtb-dev/mtb-dev.component.html
+++ b/src/app/shared/components/mtb-dev/mtb-dev.component.html
@@ -1,6 +1,4 @@
 <div class="editor-container">
-  <h2>Editor de Texto Rico</h2>
-
   <div class="controls">
     <button mat-raised-button (click)="togglePreview()" class="preview-btn">
       <mat-icon>{{ showPreview() ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -9,24 +7,19 @@
 
     <div class="action-buttons">
 
-      <button (click)="generatePDF()" class="generate-pdf-btn" [disabled]="isGeneratingPDF()">
-        <div class="button-content">
-          @if (isGeneratingPDF()) {
-            <mat-spinner diameter="20" strokeWidth="2"></mat-spinner>
-          } @else {
-            <i class="fas fa-file-pdf"></i> Gerar PDF
-          }
-        </div>
-      </button>
+      <app-dynamic-button type="pdf" label="PDF" [disabled]="isGeneratingPDF()" (clicked)="generatePDF()">
+        <ng-container *ngIf="isGeneratingPDF(); else iconPDF">
+          <mat-spinner diameter="20" strokeWidth="2"></mat-spinner>
+        </ng-container>
+        <ng-template #iconPDF></ng-template>
+      </app-dynamic-button>
 
-      <button (click)="saveDocument()" class="save-doc-btn" [disabled]="editorContent.trim() === '' || isProcessingSave">
-        <i class="fas" [class.fa-save]="!currentDocumentId" [class.fa-sync-alt]="currentDocumentId"></i>
-        {{ currentDocumentId ? 'Atualizar' : 'Salvar' }}
-      </button>
+      <app-dynamic-button type="save" [label]="currentDocumentId ? 'Atualizar' : 'Salvar'"
+        [disabled]="editorContent.trim() === '' || isProcessingSave" (clicked)="saveDocument()">
+      </app-dynamic-button>
 
-      <button (click)="clearDocument()" class="clear-btn">
-        <i class="fas fa-trash"></i> Limpar
-      </button>
+      <app-dynamic-button type="clear" label="Limpar" (clicked)="clearDocument()">
+      </app-dynamic-button>
     </div>
   </div>
 
@@ -51,10 +44,16 @@
   </div>
 
   <!-- <mat-spinner *ngIf="isLoading()" diameter="40"></mat-spinner> -->
-  
+
   <div class="saved-documents" *ngIf="savedDocuments().length > 0">
     <h3>Documentos Salvos</h3>
-    <table mat-table [dataSource]="savedDocuments()" class="mat-elevation-z1">
+
+    <app-dynamic-table [headers]="headers" [data]="savedDocuments()" [actions]="['load', 'delete']"
+      (load)="loadDocument($event)" (delete)="deleteDocument($event.id, $event)">
+    </app-dynamic-table>
+
+
+    <!-- <table mat-table [dataSource]="savedDocuments()" class="mat-elevation-z1">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let doc">{{ doc.id }}</td>
@@ -91,6 +90,6 @@
 
       <tr mat-header-row *matHeaderRowDef="['id', 'title', 'date', 'actions']"></tr>
       <tr mat-row *matRowDef="let row; columns: ['id', 'title', 'date', 'actions'];"></tr>
-    </table>
+    </table> -->
   </div>
 </div>
