--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 @if(showSideNav) {
-    <ng-container>
-        <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
-      </ng-container>
-    }
-    
-    <app-base [collapsed]="isSideNavCollapsed" [screenWidth]="screenWidth"></app-base>
+<ng-container>
+  <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+  <app-floating-language-selector />
+</ng-container>
+}
+
+<app-base [collapsed]="isSideNavCollapsed" [screenWidth]="screenWidth"></app-base>
