falta terminar translate sidnav

--- a/src/app/pages/exemples/exemples.component.html
+++ b/src/app/pages/exemples/exemples.component.html
@@ -114,7 +114,7 @@
 
 <app-chart [type]="ChartType.COLUMN" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-pie-chart [chamados]="chamadosMock"></app-pie-chart>
+<!-- <app-pie-chart [chamados]="chamadosMock"></app-pie-chart> -->
 
 
 <h1>dropDown abaixo</h1>
