--- a/src/app/pages/companies/companies.component.html
+++ b/src/app/pages/companies/companies.component.html
@@ -1,1 +1,3 @@
-<p>companies works!</p>
+    <app-dynamic-table [headers]="headers" [data]="companies" [actions]="['edit', 'delete']"
+(edit)="updateDocument()" (delete)="deleteDocument()">
+</app-dynamic-table>
