--- a/src/app/shared/components/dynamic-table/dynamic-table.component.scss
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.scss
@@ -2,6 +2,12 @@
   width: 100%;
 }
 
+.table-wrapper {
+  max-width: 1300px;
+  margin: 0 auto; /* centraliza horizontalmente */
+  overflow-x: auto; /* scroll se passar do limite em telas menores */
+}
+
 table {
   width: 100%;
   border-spacing: 0;
@@ -27,12 +33,12 @@ table {
     color: #444;
   }
 
-  tr.body-row:nth-child(even) {
-    background-color: #fafafa;
-  }
-
   tr.body-row:nth-child(odd) {
-    background-color: #ffffff;
+    background-color: #ffffff; /* branco */
+  }
+  
+  tr.body-row:nth-child(even) {
+    background-color: #aaa9a9; /* cinza um pouco mais escuro */
   }
 }
 
