--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,13 +1,13 @@
 <mat-form-field [ngClass]="[getSizeClass(), cssClass]" appearance="outline" class="custom-field">
-  <mat-label>{{ label }}</mat-label>
+  <mat-label>{{ label | translate }}</mat-label>
 
   <!-- Input do tipo texto, telefone, CPF, CNPJ, etc. -->
   <ng-container *ngIf="type !== 'date'">
     <input
       matInput
       [type]="inputType"
-      [formControl]="control"
-      [placeholder]="placeholder"
+      [formControl]="formControl"
+      [placeholder]="placeholder | translate"
       [mask]="mask"
       [dropSpecialCharacters]="false" />
 
@@ -30,7 +30,7 @@
     <input
       matInput
       [matDatepicker]="picker"
-      [formControl]="control"
+      [formControl]="formControl"
       [placeholder]="placeholder || 'Selecione a data'"
       [value]="control.value | date:'dd/MM/yyyy'" />
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -39,15 +39,16 @@
 
   <!-- Mensagens de erro -->
   <mat-error *ngIf="showError">
-    <ng-container *ngIf="control.errors?.['required']">Campo obrigatório.</ng-container>
-    <ng-container *ngIf="control.errors?.['email']">E-mail inválido.</ng-container>
-    <ng-container *ngIf="control.errors?.['pattern']">Formato inválido.</ng-container>
-    <ng-container *ngIf="control.errors?.['passwordsMismatch']">Senhas não conferem.</ng-container>
-    <ng-container *ngIf="control.errors?.['mask']">Número incompleto ou inválido.</ng-container>
-    <ng-container *ngIf="control.errors?.['cpf']">CPF inválido.</ng-container>
-    <ng-container *ngIf="control.errors?.['cnpj']">CNPJ inválido.</ng-container>
-    <ng-container *ngIf="type === 'email' && control.errors?.['emailExists']">E-mail já cadastrado.</ng-container>
+    <ng-container *ngIf="control.errors?.['required']">{{ 'erros.required' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['email']">{{ 'erros.invalid_email' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['pattern']">{{ 'erros.invalid_format' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['passwordsMismatch']">{{ 'erros.passwords_mismatch' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['mask']">{{ 'erros.invalid_mask' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['cpf']">{{ 'erros.invalid_cpf' | translate }}</ng-container>
+    <ng-container *ngIf="control.errors?.['cnpj']">{{ 'erros.invalid_cnpj' | translate }}</ng-container>
+    <ng-container *ngIf="type === 'email' && control.errors?.['emailExists']">{{ 'erros.email_exist' | translate }}</ng-container>
   </mat-error>
+  
 
   <!-- Dica para campo de e-mail válido -->
   <mat-hint *ngIf="type === 'email' && !control.errors && control.touched && control.value && control.dirty">
