--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -1,32 +1,34 @@
 <div class="table-wrapper">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1 full-width">
+  <!-- Tabela -->
+  <div class="table-scroll">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1 full-width">
+      <ng-container *ngFor="let header of headers" [matColumnDef]="header.key">
+        <th mat-header-cell *matHeaderCellDef>{{ header.label | translate }}</th>
+        <td mat-cell *matCellDef="let row">
+          <span [innerHTML]="header.formatter ? header.formatter(row) : row[header.key]"></span>
+        </td>
+      </ng-container>
 
-    <ng-container *ngFor="let header of headers" [matColumnDef]="header.key">
-      <th mat-header-cell *matHeaderCellDef>{{ header.label | translate }}</th>
-      <td mat-cell *matCellDef="let row">
-        <span [innerHTML]="header.formatter ? header.formatter(row) : row[header.key]"></span>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>{{ 'table.actions' | translate }}</th>
+        <td mat-cell *matCellDef="let row" class="action-cell">
+          <mat-icon *ngIf="actions.includes('load')" class="icon edit" (click)="emit('load', row)">upload</mat-icon>
+          <mat-icon *ngIf="actions.includes('edit')" class="icon edit" (click)="emit('edit', row)">edit</mat-icon>
+          <mat-icon *ngIf="actions.includes('delete')" class="icon delete" (click)="emit('delete', row)">delete</mat-icon>
+          <mat-icon *ngIf="actions.includes('print')" class="icon print" (click)="emit('print', row)">print</mat-icon>
+          <mat-icon *ngIf="actions.includes('view')" class="icon view" (click)="emit('view', row)">visibility</mat-icon>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'table.actions' | translate }}</th>
-      <td mat-cell *matCellDef="let row" class="action-cell">
-        <mat-icon *ngIf="actions.includes('load')" class="icon edit" (click)="emit('load', row)">upload</mat-icon>
-        <mat-icon *ngIf="actions.includes('edit')" class="icon edit" (click)="emit('edit', row)">edit</mat-icon>
-        <mat-icon *ngIf="actions.includes('delete')" class="icon delete" (click)="emit('delete', row)">delete</mat-icon>
-        <mat-icon *ngIf="actions.includes('print')" class="icon print" (click)="emit('print', row)">print</mat-icon>
-        <mat-icon *ngIf="actions.includes('view')" class="icon view" (click)="emit('view', row)">visibility</mat-icon>
-      </td>
-    </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-row"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="body-row"></tr>
+    </table>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-row"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="body-row"></tr>
-  </table>
-
-  <!-- Paginator -->
-  <mat-paginator
-    [pageSizeOptions]="[5, 10, 20, 30]"
-    [pageSize]="5"
-    showFirstLastButtons>
-  </mat-paginator>
+    <!-- Paginator dentro da mesma área scrollável -->
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20, 30]"
+      [pageSize]="5"
+      showFirstLastButtons>
+    </mat-paginator>
+  </div>
 </div>
