--- a/src/app/shared/components/line-chart/line-chart.component.scss
+++ b/src/app/shared/components/line-chart/line-chart.component.scss
@@ -1,33 +1,36 @@
 .highcharts-figure,
 .highcharts-data-table table {
-    min-width: 360px;
-    max-width: 800px;
-    margin: 1em auto;
+  min-width: 360px;
+  max-width: 800px;
+  margin: 1em auto;
 }
 
 .highcharts-description {
-    margin: 0.3rem 10px;
+  margin: 0.3rem 10px;
 }
 
 .chart-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-bottom: 1rem;
-    padding: 0 1rem;
-  }
-  
-  .close-all-button {
-    background: none;
-    border: none;
-    color: #007bff;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 4px 8px;
-    transition: color 0.2s;
-  }
-  
-  .close-all-button:hover {
-    color: #0056b3;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 1rem;
+  padding: 0 1rem;
+}
+
+.close-all-button {
+  background: none;
+  border: none;
+  color: #007bff;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 4px 8px;
+  transition: color 0.2s;
+  display: flex;
+  justify-content: revert;
+  align-items: center;
+  gap: 10px;
+}
+
+.close-all-button:hover {
+  color: #0056b3;
+}
