--- a/src/app/pages/home/operator-home/operator-home.component.html
+++ b/src/app/pages/home/operator-home/operator-home.component.html
@@ -1,17 +1,24 @@
-<div class="container">
-  <app-dashboard-card icon="support_agent" [end]="350" [duration]="1200" [label]="'home.components.client' | translate" color="#f20f40">
+<div class="container" *ngIf="!isLoading">
+  <app-dashboard-card icon="support_agent" [end]="countCompanies" [duration]="1200" [label]="'home.components.client' | translate" color="#f20f40">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="calls" [end]="80" [duration]="1200" [label]="'home.components.ticket-open' | translate" color="#3f51b5">
+  <app-dashboard-card icon="calls" [end]="countOpenCalls" [duration]="1200" [label]="'home.components.ticket-open' | translate" color="#3f51b5">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="headset_mic" [end]="350" [duration]="1200" [label]="'home.components.ticket-closed' | translate" color="#4caf50">
+  <app-dashboard-card icon="headset_mic" [end]="countClosedCalls" [duration]="1200" [label]="'home.components.ticket-closed' | translate" color="#4caf50">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="headset_off" [end]="350" [duration]="1200" [label]="'home.components.ticket-answered' | translate" color="#ff9800">
+  <app-dashboard-card icon="headset_off" [end]="countAllCalls" [duration]="1200" [label]="'home.components.ticket-answered' | translate" color="#ff9800">
   </app-dashboard-card>
-
 </div>
+
+<!-- Exibe loading opcionalmente -->
+<div *ngIf="isLoading" class="loading-container">
+  <mat-spinner></mat-spinner>
+  <p>Carregando dados, por favor aguarde...</p>
+</div>
+
+
 
 <div class="chart-container">
   <app-chart [type]="ChartType.BAR" [title]="'charts.barChart.title' | translate" [chamados]="chamadosMock"></app-chart>
