--- a/src/app/pages/home/operator-home/operator-home.component.scss
+++ b/src/app/pages/home/operator-home/operator-home.component.scss
@@ -14,5 +14,12 @@
     gap: 10px;
     box-sizing: border-box;
   }
+
+  .loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+  }
   
   
