--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <h1>
-    {{ 'home.welcome' | translate }}
-    <ng-container *ngIf="user?.username">, {{ user.username }}</ng-container>!
-  </h1>
+  {{ 'home.welcome' | translate }} 
+  <ng-container *ngIf="translatedRole"> ({{ translatedRole }})</ng-container>
+  <ng-container *ngIf="user?.username">, {{ user.username }}</ng-container>!
+</h1>
 
 <app-client-home *ngIf="userRole === UserType.CLIENT" />
 <app-operator-home *ngIf="userRole === UserType.OPERATOR" />
 <app-admin-home *ngIf="userRole === UserType.ADMIN" />
 <app-master-home *ngIf="userRole === UserType.MASTER" />
-
