custom buttons traductions ok

--- a/src/app/pages/home/call-modal/call-modal.component.html
+++ b/src/app/pages/home/call-modal/call-modal.component.html
@@ -11,7 +11,7 @@
       <app-custom-input [label]="'Pesquisar Chamado'" [placeholder]="'Digite título, operador ou conexão...'"
         [control]="searchControl" [type]="'text'" [size]="'full-width'" (onSearch)="onSearchCalls()"></app-custom-input>
 
-      <app-dynamic-button type="find" (clicked)="onSearchCalls()" [label]="'Buscar'"
+      <app-dynamic-button type="find" (clicked)="onSearchCalls()" 
         class="search-button"></app-dynamic-button>
     </div>
   </div>
