--- a/src/app/pages/home/clients-modal/clients-modal.component.html
+++ b/src/app/pages/home/clients-modal/clients-modal.component.html
@@ -12,7 +12,7 @@
         [control]="searchControl" [type]="'text'" [size]="'full-width'"
         (onSearch)="onSearchClients()"></app-custom-input>
 
-      <app-dynamic-button type="find" (clicked)="onSearchClients()" [label]="'Buscar'"
+      <app-dynamic-button type="find" (clicked)="onSearchClients()"
         class="search-button"></app-dynamic-button>
     </div>
   </div>
